# degiro-consolidated-portfolio-with-enriched-sg-turbo-data

./: .env.example  .env.example2  Makefile  README.md  holding_analysis.xlsx  iex.py  main.py  pyproject.toml  sa.py  wing_main.py
degiro_repo/: company_info.py
repos/: company_info.py  degiro.py  degiro_de.py  degiro_nl.py  etoro.py  german_turbo_info.py  google.py  nl_sg_turbo_info.py  sg_turbo_isin_to_underlying_isin_underlying.csv  sg_uisins.py  ticker_to_isin_for_etoro.csv  zero.py
repos/brokers/: degiro_de.py  degiro_nl.py  etoro.py  zero.py
repos/enrich/: company_info.py  finanzen_net.py  google.py
repos/utils/: shared.py
