[tool.poetry]
name = "degiro-dashboard"
version = "0.1.0"
description = ""
authors = ["Hoc Leng Chung <hocleng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.54.0"
ipython = "^9.4.0"
nest-asyncio = "^1.6.0"
pyotp = "^2.9.0"
pandas = "^2.3.1"
polars = "0.20.2"
lxml = "^6.0.0"
pyarrow = "^21.0.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.4"
xlsxwriter = "^3.2.5"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
playwright-stealth = "^2.0.0"
temp-mail-so = "^1.0.2"
degiro-connector = "^3.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
